--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Habsof Drive is a secured cloud storage drive application for all your files. a secured and structured new home for all your files"
+      content="Lytebox | Keep it light and secure. Lytebox is a secured cloud storage drive application for all your files. a secured and structured new home for all your files"
     />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -25,7 +25,7 @@
     -->
     <style>
       * {
-        font-family: "Roboto", sans-serif;
+        font-family: 'Roboto', sans-serif;
         margin: 0;
         padding: 0;
         box-sizing: border-box;
@@ -35,8 +35,9 @@
     <!--
  
     -->
-    <title>HBS Drive</title>
+    <title>Lytebox</title>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
